Bug 520732 - “Insert Hold Frame” via keyboard shortcut and right-click context menu crashes Krita
Summary: “Insert Hold Frame” via keyboard shortcut and right-click context menu crashe...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 5.3.2
Platform: Microsoft Windows Microsoft Windows
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression, triaged
: 520735 (view as bug list)
Depends on:
Blocks:
 
Reported: 2026-05-27 21:25 UTC by yotsuxp
Modified: 2026-05-29 21:19 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description yotsuxp 2026-05-27 21:25:53 UTC
DESCRIPTION
When using "Insert Hold Frame", either as a keyboard shortcut or via the right-click context menu, Krita crashes.

STEPS TO REPRODUCE
1. Create a blank .kra file.
2. Create at least one or two hold frames on the animation timeline. If there is one frame on the timeline, place that frame somewhere in the middle of the timeline. If there are two frames on the timeline, have a few hold frames in between them.
3. Use "Insert Hold Frame" and/or "Remove Hold Frame" between before the animation frame, or between two animation frames.

OBSERVED RESULT
- Krita crashes the moment "Insert Hold Frame" or "Remove Hold Frame" is used.

SOFTWARE/OS VERSIONS
Krita 5.3.2 (git 7d1ae74) running Windows 11
5.3.2 Linux appimage
Comment 1 dra.w.p.il.e+bugskde 2026-05-27 22:19:39 UTC
Can reproduce on Linux.
Comment 2 dra.w.p.il.e+bugskde 2026-05-27 23:55:44 UTC
*** Bug 520735 has been marked as a duplicate of this bug. ***
Comment 3 Bug Janitor Service 2026-05-28 04:45:46 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/2804
Comment 4 Dmitry Kazakov 2026-05-28 13:21:41 UTC
Git commit 57b27bfc66bc45140d7bd743f798fcb0b658a266 by Dmitry Kazakov, on behalf of Carsten Hartenfels.
Committed on 28/05/2026 at 13:21.
Pushed by dkazakov into branch 'master'.

Don't free hold frame undo command at scope exit

This was introduced in 0bb591da8096a96682560f723b960f47d597c0e7, which
incorrectly replaced `QScopedPointer::take` with `std::unique_ptr::get`.
This correctly swaps it for `std::unique_ptr::release`.

M  +1    -1    plugins/dockers/animation/KisAnimTimelineFramesModel.cpp

https://invent.kde.org/graphics/krita/-/commit/57b27bfc66bc45140d7bd743f798fcb0b658a266
Comment 5 Dmitry Kazakov 2026-05-28 13:23:07 UTC
Git commit 16b0f3604fde5e3b5b0f792474f1ea31e47c6b6f by Dmitry Kazakov, on behalf of Carsten Hartenfels.
Committed on 28/05/2026 at 13:22.
Pushed by dkazakov into branch 'krita/6.0'.

Don't free hold frame undo command at scope exit

This was introduced in 0bb591da8096a96682560f723b960f47d597c0e7, which
incorrectly replaced `QScopedPointer::take` with `std::unique_ptr::get`.
This correctly swaps it for `std::unique_ptr::release`.

M  +1    -1    plugins/dockers/animation/KisAnimTimelineFramesModel.cpp

https://invent.kde.org/graphics/krita/-/commit/16b0f3604fde5e3b5b0f792474f1ea31e47c6b6f
Comment 6 Dmitry Kazakov 2026-05-29 21:19:55 UTC
Git commit 06190602d1415525074da21cb51ff8c4a287b72f by Dmitry Kazakov, on behalf of Carsten Hartenfels.
Committed on 29/05/2026 at 21:17.
Pushed by dkazakov into tag 'v6.0.2.1'.

Don't free hold frame undo command at scope exit

This was introduced in 0bb591da8096a96682560f723b960f47d597c0e7, which
incorrectly replaced `QScopedPointer::take` with `std::unique_ptr::get`.
This correctly swaps it for `std::unique_ptr::release`.

M  +1    -1    plugins/dockers/animation/KisAnimTimelineFramesModel.cpp

https://invent.kde.org/graphics/krita/-/commit/06190602d1415525074da21cb51ff8c4a287b72f