Don't free hold frame undo command at scope exit

This was introduced in 0bb591da8096a96682560f723b960f47d597c0e7, which
incorrectly replaced `QScopedPointer::take` with `std::unique_ptr::get`.
This correctly swaps it for `std::unique_ptr::release`.

BUG:520732